--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -216,46 +216,16 @@ for(j in seq_along(gp_pred_list)) {
 Here we choose the forward model to be linear, with Gaussian observation noise, and a Gaussian prior on the calibration parameters. This 
 results in a closed-form Gaussian posterior which can be used to validate the MCMC schemes. 
 ```{r}
-N_obs <- 20
+N_obs <- 1000
 d <- 2
 G <- matrix(rnorm(N_obs*d), nrow = N_obs, ncol = d)
 Sig_theta <- diag(c(0.1, 1.0))
-linear_Gaussian_data <- generate_linear_Gaussian_test_data(random_seed = 1, N_obs = N_obs, D = d, sig2_eps = 1.0, 
+sig2_eps <- 1.0
+linear_Gaussian_data <- generate_linear_Gaussian_test_data(random_seed = 3, N_obs = N_obs, D = d, sig2_eps = sig2_eps, 
                                                            Sig_theta = Sig_theta, G = G, pars_cal_sel = NULL)
 computer_model_data <- linear_Gaussian_data$computer_model_data
 theta_prior_params <- linear_Gaussian_data$theta_prior_params
 true_post <- linear_Gaussian_data$true_posterior
-```
-
-
-```{r}
-data_obs <- matrix(0.0, nrow = 2, ncol = 1)
-colnames(data_obs) <- "y"
-computer_model_data <- list(f = function(theta) {matrix(theta, ncol=1)}, 
-                            data_obs = data_obs, 
-                            n_obs = 2, 
-                            output_vars = "y", 
-                            pars_cal_names = c("theta1", "theta2"),
-                            forward_model = "custom_likelihood")
-
-theta_prior_params <- data.frame(dist = c("Uniform", "Uniform"), 
-                                 param1 = c(-100, -100), 
-                                 param2 = c(100, 100))
-```
-
-
-```{r}
-# Verify likelihood computation is correct. Distribution should be N_2(theta|0, sig2_eps*I)
-sig2_eps <- matrix(1.0, nrow=1)
-L_sig2_eps <- t(chol(sig2_eps))
-theta <- c(1, 2)
-
-model_errs <- get_computer_model_errs(theta, computer_model_data)
-llik_curr <- llik_Gaussian_err(model_errs, L = L_sig2_eps) 
-llik_baseline <- dnorm(theta[1], sd=sqrt(sig2_eps), log=TRUE) + dnorm(theta[2], sd=sqrt(sig2_eps), log=TRUE)
-
-print(llik_curr)
-print(llik_baseline)
 ```
 
 
@@ -278,9 +248,24 @@ hist(samp$theta[burn_in:N_mcmc,2], 50)
 ```
 
 ```{r}
-stats::cov(samp$theta[burn_in:N_mcmc,])
+# Sample moments. 
+print("MCMC Estimates:")
+print("Cov:")
+print(stats::cov(samp$theta[burn_in:N_mcmc,]))
+
+print("Mean:")
+print(colMeans(samp$theta[burn_in:N_mcmc,]))
 ```
 
+```{r}
+# True moments. 
+print("True Posterior Moments:")
+print("Cov:")
+print(true_post$Cov)
+
+print("Mean:")
+print(true_post$mean)
+```
 
 
 
